# NetFlix-Mitkadem-MEG-BNO

./: .gitignore  AddCommand.cpp  App.cpp  CMakeLists.txt  ConsoleMenu.cpp  Dockerfile  HelpCommand.cpp  ICommand.h  IMenu.h  README.md  RecomedionCommand.cpp  docker-compose.yml  dockerfile  dockerfile.nodejs  main.cpp  package-lock.json  package.json
Commands/: Add.cpp  Add.h  AddCommand.cpp  AddCommand.h  AddTest.cpp  RecomedionCommand.cpp  RecomedionCommand.h  Recommend.cpp  Recommend.h  addtest
Data_Classes/: File.cpp  FileTests.cpp  Movie.cpp  Movie.h  User.cpp  User.h
File_Classes/: AddBuilder.cpp  AddBuilder.h  BaseFile.cpp  BaseFile.h  FileTests.cpp  IFile.h  MovieFile.cpp  MovieFile.h  Movies.txt  StringHandler.cpp  UserFile.cpp  UserFile.h  UserMovies.cpp  UserMovies.h  Users.txt  main.cpp  stringhandler.cpp
StringTools/: StringTools.cpp  StringTools.h
config/: .env.windows
data/: Movies.txt  Users.txt
my-frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
my-frontend/src/: App.css  App.js  index.js
my-frontend/src/components/: CategoriesDropdown.jsx  CategoryForm.jsx  ItemList.jsx  MovieForm.jsx  MovieInfo.jsx  MovieTemplate.jsx  Popup.jsx  SearchBar.jsx  Signup.jsx  httpUtils.jsx  signin.jsx
my-frontend/src/components/NavBar/: Navbar.css  Navbar.js
my-frontend/src/components/PolaroidFrame/: PolaroidFrame.css  PolaroidFrame.jsx
my-frontend/src/components/mainScreen/: BigMovie.jsx  GuestMovies.jsx  GuestScreenTemp.jsx  MainScreenTemp.jsx  MoviesList.jsx  categoriesAndMoviesDisplay.jsx  queryCardView.jsx
my-frontend/src/context/: ThemeContext.js
my-frontend/src/pages/: Admin.js  Admin2.jsx  Signin.js  Signup.js  styles.css  stylesb.css  stylesbuttons.css  videoPlayer.js
my-frontend/src/pages/NavBar/: Navbar.css  Navbar.js
my-frontend/src/pages/mainPage/: GuestMain.css  GuestMain.js  LoggedMain.js  LoggedMainD.css
my-frontend/src/utils/: AdminAuth.js  AuthCheck.js  imageConverter.js
nodejs/: Dockerfile  README.txt  app.js  docker-compose.yml  package-lock.json  package.json
nodejs/config/: .env.docker  .env.local  .env.windows
nodejs/controllers/: categoriesControllers.js  moviesControllers.js  userController.js
nodejs/models/: IdsCounter.js  categories.js  movies.js  user.js
nodejs/pages/: package-lock.json  package.json  server.js
nodejs/pages/config/: .env  .env.docker
nodejs/pages/public/: index.html  script.js  style.css
nodejs/routes/: categories.js  movies.js  token.js  user.js
nodejs/services/: CategoriesService.js  MoviesService.js  SendData.js  UsersService.js
nodejs/utils/: idManager.js  imageConverter.js  upload.js
nodejs/validation/: errorMessages.js  validityFunc.js
src/: App.cpp  App.h  Client.py  ConsoleMenu.cpp  ConsoleMenu.h  Dockerfile  client.cpp  main.cpp  server.cpp
src/App/: App.cpp  App.h
src/Commands/: Add.cpp  Add.h  AddCommand.cpp  AddCommand.h  GET.cpp  GET.h  Help.cpp  HelpCommand.cpp  HelpCommand.h  ICommand.h  Patch.cpp  Patch.h  Post.cpp  Post.h  RecomedionCommand.cpp  RecomedionCommand.h  RecommendCommand.cpp  RecommendCommand.h
src/Commands/Add_Data/: Patch.cpp  Patch.h  PatchCmd.cpp  PatchCmd.h  Post.cpp  Post.h  PostCmd.cpp  PostCmd.h
src/Commands/Data_Manipulation/: Get.cpp  Get.h  GetCmd.cpp  GetCmd.h
src/Commands/Delete_Data/: Delete.cpp  Delete.h  DeleteCmd.cpp  DeleteCmd.h
src/Commands/General/: Help.cpp  HelpCmd.cpp  HelpCmd.h  HelpCommand.h  ICommand.h  Validity.cpp  Validity.h
src/File_Classes/: AddBuilder.cpp  AddBuilder.h  BaseFile.cpp  BaseFile.h  FileIO.cpp  FileIO.h  FileTests.cpp  IFile.h  MovieFile.cpp  MovieFile.h  StringHandler.cpp  StringHandler.h  UserFile.cpp  UserFile.h  UserMovies.cpp  UserMovies.h  main.cpp  stringhandler.h
src/Menu/: ConsoleMenu.cpp  ConsoleMenu.h  IMenu.h  ServerMenu.cpp  ServerMenu.h
src/NewApp/: App.cpp  App.h
src/StringTools/: StringTools.cpp
src/ThreadPool/: ThreadPool.cpp  ThreadPool.h  client.cpp  server.cpp
src/client/android/: Dockerfile  docker-compose.yml
src/client/android/app/: build.gradle.kts
src/client/android/app/src/main/: AndroidManifest.xml
src/client/android/app/src/main/java/com/example/myapplication/: AdminActivity.java  AdminForm2Activity.java  AdminFormActivity.java  MainActivity.java  SignupActivity.java  ThemesActivity.java
src/client/android/app/src/main/res/drawable/: polaroid_frame.xml
src/client/android/app/src/main/res/layout/: activity_fullscreen.xml  activity_guest_main.xml  activity_logged_main.xml  activity_main.xml  activity_movie_info.xml  admin.xml  admin_form.xml  adminform2.xml  app_bar_logged_main.xml  category_item_layout.xml  content_logged_main.xml  fragment_home.xml  item_list_layout.xml  item_parent_recyclerview.xml  login.xml  movie_item_layout.xml  movie_layout.xml  nav_header_logged_main.xml  signup.xml  test.xml  themes.xml  video_header.xml
src/client/android/app/src/main/res/menu/: activity_main_drawer.xml  logged_main.xml
src/client/android/app/src/main/res/navigation/: mobile_navigation.xml
src/client/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/client/android/app/src/main/res/values-night/: colors.xml  styles.xml  themes.xml
src/client/android/app/src/main/res/xml/: network_security_config.xml
src/client/android/gradle/: libs.versions.toml
src/client/android/gradle/wrapper/: gradle-wrapper.properties
src/dataClass/: Data.cpp  Data.h
src/tests/: Commends_Tests.cpp  Dockerfile  File_Classes_Tests.cpp  InputTest.cpp  MutexTests.cpp
tests/: File_Classes_Tests.cpp
wiki/: ClientInstructions.md  Docker.md  LoggedInMainPage.md  adminInstruction.md  admin_ex.text
(+48 files in other folders)
